--- a/.gitattributes
+++ b/.gitattributes
@@ -55,6 +55,7 @@ resources/schemas/dbscripts/postgresql/targetedms-14.13-14.14.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.14-14.15.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.15-14.16.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.20-14.21.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-14.20-14.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.21-14.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.22-14.23.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.23-14.24.sql -text
@@ -99,6 +100,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-14.13-14.14.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.14-14.15.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.15-14.16.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.20-14.21.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-14.20-14.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.21-14.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.22-14.23.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.23-14.24.sql -text
