--- a/.gitattributes
+++ b/.gitattributes
@@ -345,6 +345,7 @@ webapp/TargetedMS/images/spectrum.gif -text
 webapp/TargetedMS/jquery/jquery-1.8.3.min.js -text
 webapp/TargetedMS/js/BaseQCPlotPanel.js -text
 webapp/TargetedMS/js/LeveyJenningsTrendPlotPanel.js -text
+webapp/TargetedMS/js/LinkVersionsDialog.js -text
 webapp/TargetedMS/js/ParetoPlotPanel.js -text
 webapp/TargetedMS/js/dropDownUtil.js -text
 webapp/TargetedMS/lorikeet_0.3/css/lorikeet.css -text
