--- a/.gitattributes
+++ b/.gitattributes
@@ -237,6 +237,7 @@ src/org/labkey/targetedms/parser/AreaRatio.java -text
 src/org/labkey/targetedms/parser/ChromInfo.java -text
 src/org/labkey/targetedms/parser/Chromatogram.java -text
 src/org/labkey/targetedms/parser/ChromatogramTran.java -text
+src/org/labkey/targetedms/parser/CustomIon.java -text
 src/org/labkey/targetedms/parser/DataSettings.java -text
 src/org/labkey/targetedms/parser/GeneralMolecule.java -text
 src/org/labkey/targetedms/parser/GeneralMoleculeAnnotation.java -text
