--- a/.gitattributes
+++ b/.gitattributes
@@ -486,6 +486,7 @@ test/src/org/labkey/test/util/targetedms/QCHelper.java -text
 test/test_targetedms.iml -text
 webapp/TargetedMS/DataTables/jquery.dataTables.min.css -text
 webapp/TargetedMS/DataTables/jquery.dataTables.min.js -text
+webapp/TargetedMS/css/CalibrationCurve.css -text
 webapp/TargetedMS/css/LinkVersionsDialog.css -text
 webapp/TargetedMS/css/ParetoPlot.css -text
 webapp/TargetedMS/css/QCSummary.css -text
