--- a/.gitattributes
+++ b/.gitattributes
@@ -542,6 +542,7 @@ webapp/TargetedMS/js/MovingRangePlotHelper.js -text
 webapp/TargetedMS/js/ParetoPlotPanel.js -text
 webapp/TargetedMS/js/QCPlotHelperBase.js -text
 webapp/TargetedMS/js/QCPlotHelperWrapper.js -text
+webapp/TargetedMS/js/QCPlotLegendHelper.js -text
 webapp/TargetedMS/js/QCSummaryPanel.js -text
 webapp/TargetedMS/js/QCTrendPlotPanel.js -text
 webapp/TargetedMS/js/dropDownUtil.js -text
