--- a/.gitattributes
+++ b/.gitattributes
@@ -103,6 +103,7 @@ resources/schemas/dbscripts/postgresql/targetedms-17.10-17.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.11-17.12.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.12-17.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.20-17.21.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-17.20-17.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.21-17.22.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.30.sql -text
@@ -172,6 +173,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-17.10-17.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.11-17.12.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.12-17.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.20-17.21.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-17.20-17.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.21-17.22.sql -text
 resources/schemas/targetedms.xml -text
 src/ChromatogramGroupData.proto -text
